[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "wheel", "numpy", "pybind11>=2.12"]
build-backend = "setuptools.build_meta"

[project]
name = "progressivis_cpp"
description = "C++ modules for ProgressiVis"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "INRIA, Jean-Daniel Fekete, Christian Poli", email = "jean-daniel.fekete@inria.fr" },
]
keywords = ["Progressive analytics visualization"]
classifiers = [
     "Development Status :: 2 - PRe-Alpha",
     "Topic :: Scientific/Engineering :: Visualization",
     "Topic :: Scientific/Engineering :: Information Analysis",
     "License :: OSI Approved :: BSD License",
]
dependencies = [
    "progressivis",
]
# Important: Remove any existing version declaration
# version = "0.0.1"
dynamic = ["version"]
# more missing

[tool.setuptools_scm]
version_file = "progressivis_cpp/_version.py"

[tool.ruff]
extend-exclude = ["notebooks"]

